k8s/client-auth-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-auth-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: client-auth
  ports:
    - port: 3000
      targetPort: 3000
