k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-container-cluster-ip-service
                port:
                  number: 3000
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-auth-cluster-ip-service
                port:
                  number: 3000
          - path: /dashboard/?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-dashboard-cluster-ip-service
                port:
                  number: 3000
